--- a/package.json
+++ b/package.json
@@ -11,8 +11,9 @@
     "analyze": "node ./internals/scripts/analyze.js",
     "prebuild": "npm run build:clean",
     "npmcheckversion": "node ./internals/scripts/npmcheckversion.js",
-    "build": "cross-env NODE_ENV=production webpack --config internals/webpack/webpack.prod.babel.js --color -p --progress --hide-modules --display-optimization-bailout",
+    "build": "cross-env NODE_ENV=production postcss:build & webpack --config internals/webpack/webpack.prod.babel.js --color -p --progress --hide-modules --display-optimization-bailout",
     "build:clean": "rimraf ./build",
+    "postcss:build": "postcss ./app/components/common/styles/tailwind.css -o ./app/components/common/styles/tailwind.css",
     "start": "cross-env NODE_ENV=development node server",
     "dashboard": "cross-env NODE_ENV=development webpack-dashboard -m -- node server",
     "api": "json-server app/components/common/data/api.js --port 4000",
@@ -52,6 +53,7 @@
   "dependencies": {
     "@hot-loader/react-dom": "17.0.1",
     "@reduxjs/toolkit": "1.5.1",
+    "autoprefixer": "9",
     "chalk": "4.1.1",
     "compression": "1.7.4",
     "connected-react-router": "6.9.1",
@@ -128,12 +130,15 @@
     "lint-staged": "10.2.2",
     "ngrok": "3.2.7",
     "node-plop": "0.25.0",
-    "node-sass": "4.14.1",
     "null-loader": "4.0.0",
     "plop": "2.6.0",
+    "postcss": "8.2.10",
+    "postcss-loader": "4.2.0",
+    "postcss-preset-env": "6.7.0",
     "prettier": "2.0.5",
     "react-test-renderer": "17.0.1",
     "rimraf": "3.0.2",
+    "sass": "1.32.11",
     "sass-loader": "8.0.2",
     "shelljs": "0.8.4",
     "style-loader": "1.2.1",
@@ -142,6 +147,7 @@
     "stylelint-config-styled-components": "0.1.1",
     "stylelint-processor-styled-components": "1.10.0",
     "svg-url-loader": "5.0.0",
+    "tailwindcss": "2.1.2",
     "terser-webpack-plugin": "2.3.6",
     "url-loader": "4.1.0",
     "webpack": "4.43.0",
