--- a/package.json
+++ b/package.json
@@ -48,13 +48,17 @@
   "dependencies": {
     "@hot-loader/react-dom": "17.0.1",
     "@reduxjs/toolkit": "1.5.1",
+    "@svgr/webpack": "^5.5.0",
+    "alpinejs": "^2.8.2",
     "autoprefixer": "9",
+    "axios": "^0.21.1",
     "chalk": "4.1.1",
     "compression": "1.7.4",
     "connected-react-router": "6.9.1",
     "cross-env": "7.0.3",
     "express": "4.17.1",
     "fontfaceobserver": "2.1.0",
+    "formik": "^2.2.6",
     "history": "4.10.1",
     "hoist-non-react-statics": "3.3.2",
     "immer": "9.0.2",
@@ -66,11 +70,14 @@
     "offline-plugin": "5.0.7",
     "pretty-error": "3.0.3",
     "prop-types": "15.7.2",
+    "query-string": "^7.0.0",
     "react": "17.0.1",
     "react-app-polyfill": "2.0.0",
+    "react-click-away-listener": "^2.0.3",
     "react-dom": "17.0.1",
     "react-helmet-async": "1.0.9",
     "react-hot-loader": "4.13.0",
+    "react-icons": "^4.2.0",
     "react-is": "17.0.1",
     "react-redux": "7.2.4",
     "react-router-dom": "5.2.0",
@@ -78,7 +85,8 @@
     "redux-saga": "1.1.3",
     "reselect": "4.0.0",
     "sanitize.css": "12.0.1",
-    "styled-components": "5.3.0"
+    "styled-components": "5.3.0",
+    "yup": "^0.32.9"
   },
   "devDependencies": {
     "@babel/cli": "7.8.4",
