--- a/package.json
+++ b/package.json
@@ -46,7 +46,9 @@
     "babel-core": "7.0.0-bridge.0"
   },
   "dependencies": {
+    "@headlessui/react": "^1.2.0",
     "@hot-loader/react-dom": "17.0.1",
+    "@material-ui/core": "^4.11.4",
     "@reduxjs/toolkit": "1.5.1",
     "@svgr/webpack": "^5.5.0",
     "alpinejs": "^2.8.2",
