--- a/package.json
+++ b/package.json
@@ -67,7 +67,7 @@
     "intl": "1.2.5",
     "invariant": "2.2.4",
     "ip": "1.1.5",
-    "lodash": "4.17.21",
+    "lodash": "^4.17.21",
     "minimist": "1.2.5",
     "offline-plugin": "5.0.7",
     "pretty-error": "3.0.3",
@@ -81,6 +81,7 @@
     "react-hot-loader": "4.13.0",
     "react-icons": "^4.2.0",
     "react-is": "17.0.1",
+    "react-qr-svg": "^2.4.0",
     "react-redux": "7.2.4",
     "react-router-dom": "5.2.0",
     "redux-injectors": "1.3.0",
